# prompt-guard

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: design.md
src/prompt_guard/: main.py
src/prompt_guard/analysis/: analyzer.py  schemas.py
src/prompt_guard/analysis/detectors/: config_file_write.py  dns_exfiltration.py  invisible_character.py  markdown_exfiltration.py
src/prompt_guard/api/: main.py
src/prompt_guard/api/templates/: index.html
tests/analysis/detectors/: test_config_file_write.py  test_dns_exfiltration.py  test_invisible_character.py  test_markdown_exfiltration.py
