[tool.poetry]
name = "prompt-guard"
version = "0.1.0"
description = "A tool to analyze LLM prompts for potential security vulnerabilities."
authors = ["zhu-weijie <byzhubaiyuan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "W", "B"] # E/W=pycodestyle, F=pyflakes, I=isort, B=flake8-bugbear
lint.ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
